fix: spacing drawer content

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -400,3 +400,8 @@
         gap: 24px !important;
     }
 }
+
+.navbar-nav-mobile {
+    min-width: 276px;
+    padding-left: 28px;
+}
